--- a/.github/workflows/resume.yml
+++ b/.github/workflows/resume.yml
@@ -7,14 +7,14 @@ on:
 
 jobs:
   build:
-    if: github.actor != 'github-actions[bot]'  # skip if commit was made by the bot
+    if: github.actor != 'github-actions[bot]'  # avoid loops
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
         with:
-          persist-credentials: false # prevents token conflicts
+          persist-credentials: false # we’ll inject our own token
 
       - name: Setup Node
         uses: actions/setup-node@v4
@@ -42,12 +42,13 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add Divyansh_Rana_Resume.pdf
           git commit -m "chore: update generated resume PDF [skip ci]" || echo "No changes to commit"
+          git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}
           git push
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   deploy:
-    if: github.actor != 'github-actions[bot]'  # also skip deploy loop
+    if: github.actor != 'github-actions[bot]'  # avoid loops
     needs: build
     runs-on: ubuntu-latest
     permissions:
