--- a/.github/workflows/resume.yml
+++ b/.github/workflows/resume.yml
@@ -17,6 +17,7 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -43,19 +44,33 @@ jobs:
         env:
           GITHUB_SHA: ${{ github.sha }}
 
+      # collect into public/ and create a cache-busted copy
+      - name: Collect PDF into public
+        run: |
+          set -e
+          mkdir -p public
+          if [ -f Divyansh_Rana_Resume.pdf ]; then
+            cp Divyansh_Rana_Resume.pdf public/
+          fi
+          cp public/Divyansh_Rana_Resume.pdf "public/Divyansh_Rana_Resume_${GITHUB_SHA}.pdf"
+        env:
+          GITHUB_SHA: ${{ github.sha }}
+
       - name: Verify PDF exists and changed
         run: |
           echo "Listing public/"
-          ls -lah public || true
+          ls -lah public
           test -f public/Divyansh_Rana_Resume.pdf || (echo "PDF not in public/"; exit 1)
           echo "SHA256 (stable):"
           sha256sum public/Divyansh_Rana_Resume.pdf
           echo "SHA256 (versioned):"
-          sha256sum public/Divyansh_Rana_Resume_${GITHUB_SHA}.pdf
+          sha256sum "public/Divyansh_Rana_Resume_${GITHUB_SHA}.pdf"
+        env:
+          GITHUB_SHA: ${{ github.sha }}
 
-      - name: Generate index.html with fresh links
+      # Optional: simple index with both links at site root
+      - name: Generate index.html with fresh link
         run: |
-          mkdir -p public
           cat > public/index.html <<'HTML'
           <!doctype html>
           <html lang="en">
@@ -64,27 +79,18 @@ jobs:
             <meta name="viewport" content="width=device-width, initial-scale=1" />
             <title>Resume</title>
             <style>
-              body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; line-height: 1.4; padding: 2rem; max-width: 800px; margin: auto; }
+              body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; line-height: 1.5; padding: 2rem; max-width: 820px; margin: auto; }
               a { text-decoration: none; }
             </style>
           </head>
           <body>
             <h1>Divyansh Rana — Resume</h1>
-            <p>
-              <a id="stable" href="Divyansh_Rana_Resume.pdf">Stable PDF</a>
-              (may be cached)
-            </p>
-            <p>
-              <a id="fresh" href="#">Fresh (per-commit) PDF</a>
-            </p>
-            <script>
-              // Insert the commit SHA at build time via placeholder substitution in the next step
-              document.getElementById('fresh').href = 'Divyansh_Rana_Resume_{{SHA}}.pdf';
-            </script>
+            <p><a href="Divyansh_Rana_Resume.pdf">Stable PDF</a> (may be cached)</p>
+            <p><a id="fresh" href="#">Fresh (per-commit) PDF</a></p>
+            <script>document.getElementById('fresh').href = 'Divyansh_Rana_Resume_{{SHA}}.pdf';</script>
           </body>
           </html>
           HTML
-          # Inject the real SHA into index.html
           sed -i "s/{{SHA}}/${GITHUB_SHA}/g" public/index.html
         env:
           GITHUB_SHA: ${{ github.sha }}
