branch name fix

--- a/.github/workflows/resume.yml
+++ b/.github/workflows/resume.yml
@@ -112,21 +112,27 @@ jobs:
           GITHUB_SHA: ${{ github.sha }}
 
       # ---- Publish to the other repo (docx) on branch gh-pages ----
-      - name: Push to docx:gh-pages
+      - name: Push to docx:main
         run: |
           set -euo pipefail
           cd public
-          # Optional: add a custom domain
-          # echo 'cv.example.com' > CNAME
 
           git init
           git config user.name  "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
+
           git add .
           git commit -m "Publish resume PDFs from ${GITHUB_SHA} [skip ci]"
-          git branch -M gh-pages
+          git branch -M main
+
+          # IMPORTANT: token in URL for write access
           git remote add origin "https://x-access-token:${DOCX_PUSH_TOKEN}@github.com/divyanshrana/docx.git"
-          git push --force origin gh-pages
+
+          # (Optional) Show remote without leaking token
+          git remote -v | sed -E 's/x-access-token:[^@]+/x-access-token:***HIDDEN***/'
+
+          # If main exists and you want to overwrite site contents each deploy:
+          git push --force origin main
         env:
           DOCX_PUSH_TOKEN: ${{ secrets.DOCX_PUSH_TOKEN }}
           GITHUB_SHA: ${{ github.sha }}
